<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Plugspace</string>
    <string name="log_empty_tag" translatable="false">Empty Tag</string>
    <string name="log_empty_msg" translatable="false">Empty Message</string>
    <string name="log_symbol" translatable="false">>---></string>
    <string name="font_times_regular">times.ttf</string>
    <string name="font_times_bold">timesbd.ttf</string>
    <string name="let_s_get_closer">Let\'s get closer</string>
    <string name="prioritize_yourself_and_">Prioritize yourself and see what you rank</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_process">Login process</string>
    <string name="sign_up_process">Sign up process</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_n">Enter your mobile number to sign up</string>
    <string name="enter_your_mobile_login">Enter your mobile number to login</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="continues">CONTINUE</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up2">Sign Up</string>
    <string name="login2">Login</string>
    <string name="ok">OK</string>
    <string name="alert_enter_mobile_no">Please enter mobile number</string>
    <string name="alert_select_gender">Please select gender</string>
    <string name="alert_select_height">Please select height</string>
    <string name="alert_select_weight">Please select weight</string>
    <string name="alert_enter_height">Please enter height</string>
    <string name="alert_enter_weight">Please enter weight</string>
    <string name="alert_select_dress">Please select dress size</string>
    <string name="alert_select_engaged">Please select engaged</string>
    <string name="alert_select_tattoo">Please select tattoo</string>
    <string name="alert_select_education">Please select education</string>
    <string name="alert_select_children">Please select children</string>
    <string name="alert_select_relation">Please select relationship status</string>
    <string name="alert_select_ethnicity">Please select your ethnicity</string>
    <string name="alert_select_marrying_race">Please select marrying race</string>
    <string name="alert_select_dob">Please select date of birth</string>
    <string name="alert_select_consider_myself">Please select consider your self</string>
    <string name="alert_select_meet_gender">Please select meet gender</string>
    <string name="alert_enter_about_you">Please enter age range date/marrying</string>
    <string name="alert_enter_mrg_age">Please enter age range date/marrying</string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_make_over">Please enter make over</string>
    <string name="alert_enter_company_name">Please enter company name</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_subject">Please enter subject</string>
    <string name="alert_enter_msg">Please enter message</string>
    <string name="alert_write_msg">Please write something</string>
    <string name="alert_enter_job_title">Please enter job title</string>
    <string name="alert_enter_valid_mobile_no">Please enter valid mobile number</string>
    <string name="alert_select_1_photo">Please select first image</string>
    <string name="alert_select_2_photo">Please select second image</string>
    <string name="verification">Verification</string>
    <string name="enter_the_pin_sent_">Enter the pin sent to your phone</string>
    <string name="don_t_receive_the_code">Don\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="i_m_a">I\'m a</string>
    <string name="can_you_tell_us_which_">Can you tell us which gender you are?</string>
    <string name="biologically_female">Biologically Female</string>
    <string name="biologically_male">Biologically Male</string>
    <string name="trans_male">Male</string>
    <string name="trans_female">Female</string>
    <string name="kjksda">Biologically Female</string>
    <string name="next">NEXT</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="so_that_we_know_how_to_call_you">So that we know how to call you</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="type_your_msg">Type your message</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_subject">Enter your subject</string>
    <string name="rank_yourself">Rank yourself</string>
    <string name="no_filter_or_makeup_" tools:ignore="TypographyDashes">No filter or makeup on from 1-10 where do you Rank yourself in terms of Beauty?</string>
    <string name="no_filter_or_makeup_male" tools:ignore="TypographyDashes">No filters or makeup on from 1-10 where do you rank yourself?</string>
    <string name="you_rank_yourself_">You rank yourself 10 which rank you are in the same category as these women per body and face beauty</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_new_photos">Add New Photos</string>
    <string name="enable_geolocation">Enable Geolocation</string>
    <string name="enable_geolocation_">Enable location to show people in your area</string>
    <string name="enable">ENABLE</string>
    <string name="gps_not_enable">GPS not enable</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="note_add_2_photo_straight">Note: add 2 photo straight from camera no makeup or filters</string>
    <string name="note_add_full_size_body_pictures">Note: Add full size body pictures</string>
    <string name="note_add_multiple_fully">Note: Add multiple fully dress photos with or without makeup</string>
    <string name="msg_select_select_option">Select Profile Picture</string>
    <string name="msg_select_option">Select option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="height">Height</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="_3_0_ft">3\'0\'\' ft</string>
    <string name="_3_1_ft">3\'1\'\' ft</string>
    <string name="_3_2_ft">3\'2\'\' ft</string>
    <string name="_3_3_ft">3\'3\'\' ft</string>
    <string name="_3_4_ft">3\'4\'\' ft</string>
    <string name="_3_5_ft">3\'5\'\' ft</string>
    <string name="_3_6_ft">3\'6\'\' ft</string>
    <string name="_3_7_ft">3\'7\'\' ft</string>
    <string name="_3_8_ft">3\'8\'\' ft</string>
    <string name="_3_9_ft">3\'9\'\' ft</string>
    <string name="_3_10_ft">3\'10\'\' ft</string>
    <string name="_3_11_ft">3\'11\'\' ft</string>
    <string name="_4_0_ft">4\'0\'\' ft</string>
    <string name="_4_1_ft">4\'1\'\' ft</string>
    <string name="_4_2_ft">4\'2\'\' ft</string>
    <string name="_4_3_ft">4\'3\'\' ft</string>
    <string name="_4_4_ft">4\'4\'\' ft</string>
    <string name="_4_5_ft">4\'5\'\' ft</string>
    <string name="_4_6_ft">4\'6\'\' ft</string>
    <string name="_4_7_ft">4\'7\'\' ft</string>
    <string name="_4_8_ft">4\'8\'\' ft</string>
    <string name="_4_9_ft">4\'9\'\' ft</string>
    <string name="_4_10_ft">4\'10\'\' ft</string>
    <string name="_4_11_ft">4\'11\'\' ft</string>
    <string name="_5_0_ft">5\'0\'\' ft</string>
    <string name="_5_1_ft">5\'1\'\' ft</string>
    <string name="_5_2_ft">5\'2\'\' ft</string>
    <string name="_5_3_ft">5\'3\'\' ft</string>
    <string name="_5_4_ft">5\'4\'\' ft</string>
    <string name="_5_5_ft">5\'5\'\' ft</string>
    <string name="_5_6_ft">5\'6\'\' ft</string>
    <string name="_5_7_ft">5\'7\'\' ft</string>
    <string name="_5_8_ft">5\'8\'\' ft</string>
    <string name="_5_9_ft">5\'9\'\' ft</string>
    <string name="_5_10_ft">5\'10\'\' ft</string>
    <string name="_5_11_ft">5\'11\'\' ft</string>
    <string name="_6_0_ft">6\'0\'\' ft</string>
    <string name="_6_1_ft">6\'1\'\' ft</string>
    <string name="_6_2_ft">6\'2\'\' ft</string>
    <string name="_6_3_ft">6\'3\'\' ft</string>
    <string name="_6_4_ft">6\'4\'\' ft</string>
    <string name="_6_5_ft">6\'5\'\' ft</string>
    <string name="_6_6_ft">6\'6\'\' ft</string>
    <string name="_6_7_ft">6\'7\'\' ft</string>
    <string name="_6_8_ft">6\'8\'\' ft</string>
    <string name="_6_9_ft">6\'9\'\' ft</string>
    <string name="_6_10_ft">6\'10\'\' ft</string>
    <string name="_6_11_ft">6\'11\'\' ft</string>
    <string name="_7_0_ft">7\'0\'\' ft</string>
    <string name="_7_1_ft">7\'1\'\' ft</string>
    <string name="_7_2_ft">7\'2\'\' ft</string>
    <string name="_7_3_ft">7\'3\'\' ft</string>
    <string name="_7_4_ft">7\'4\'\' ft</string>
    <string name="_7_5_ft">7\'5\'\' ft</string>
    <string name="_7_6_ft">7\'6\'\' ft</string>
    <string name="_7_7_ft">7\'7\'\' ft</string>
    <string name="_7_8_ft">7\'8\'\' ft</string>
    <string name="weight">Weight</string>
    <string name="what_is_your_weight">What is your weight?</string>
    <string name="education_status">Education Status</string>
    <string name="can_you_tell_us_">Can you tell us which education you finish?</string>
    <string name="high_school">High School</string>
    <string name="bachelor">Bachelor</string>
    <string name="vocational_school">Vocational School</string>
    <string name="phd">PHD</string>
    <string name="some_collage">Some College</string>
    <string name="advanced_degree">Advanced Degree</string>
    <string name="associate_degree">Associate Degree</string>
    <string name="bma">BMA</string>
    <string name="others">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="do_you_have_to_work_to_">Do you have to work to pay significant bills?</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="success">Success!</string>
    <string name="thanks_for_submitting">Thanks for submitting your profile we will get back to you shortly. Mean while take a look at what people around rank and what is out there while we generate your rank</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="lorem_ipsum">Lorem Ipsum has been the industry\'s standard this dummy text ever since the when book.</string>
    <string name="gold">Gold</string>
    <string name="_39_99">$ 39.99</string>
    <string name="_6_months_subscriptions">6 Months Subscriptions</string>
    <string name="save_profile">Save</string>
    <string name="report_profile">Report</string>
    <string name="remove_profile">Remove</string>
</resources>