<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".fragment.SlcBioFragment">

    <com.plugspace.view.CustomTextView
        style="@style/CustomTextViewStyle"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="start"
        android:text="@string/i_m_a"
        android:textSize="@dimen/_20ssp"
        app:font_text="@string/font_times_bold" />


    <com.plugspace.view.CustomTextView
        style="@style/CustomTextViewStyle"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:gravity="start"
        android:singleLine="false"
        android:text="@string/can_you_tell_us_which_"
        android:textSize="@dimen/_15ssp"
        app:font_text="@string/font_times_regular" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSlcBoi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:itemCount="5"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_weight="1"
        android:overScrollMode="never"
        tools:listitem="@layout/row_slc_bio" />

    <com.plugspace.view.CustomButton
        android:id="@+id/btnNext"
        style="@style/CustomButtonStyle"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="@string/next" />

</LinearLayout>