<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottomButton"
        android:orientation="vertical"
        android:paddingTop="@dimen/_25sdp"
        android:paddingBottom="@dimen/_25sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_img" />

        <com.plugspace.view.CustomTextView
            style="@style/CustomTextViewStyle"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/let_s_get_closer"
            android:textSize="@dimen/_18ssp"
            app:font_text="@string/font_times_regular" />

        <com.plugspace.view.CustomTextView
            style="@style/CustomTextViewStyle"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start"
            android:singleLine="false"
            android:text="@string/prioritize_yourself_and_"
            android:textColor="@color/colorPurple"
            android:textSize="@dimen/_25ssp"
            app:font_text="@string/font_times_bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="horizontal">

        <com.plugspace.view.CustomButton
            android:id="@+id/btnLogin"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login" />

        <View
            android:layout_width="@dimen/_15sdp"
            android:layout_height="match_parent" />

        <com.plugspace.view.CustomButton
            android:id="@+id/btnSignUp"
            style="@style/CustomButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/black_border_10sdp"
            android:text="@string/sign_up"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

</RelativeLayout>