<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/white_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_success" />

        <com.plugspace.view.CustomTextView
            style="@style/CustomTextViewStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/success"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_18ssp"
            app:font_text="@string/font_times_bold" />

        <com.plugspace.view.CustomTextView
            style="@style/CustomTextViewStyle"
            android:singleLine="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/thanks_for_submitting"
            android:textSize="@dimen/_12ssp"
            app:font_text="@string/font_times_bold" />

        <com.plugspace.view.CustomButton
            android:id="@+id/btnOk"
            style="@style/CustomButtonStyle"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>