<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSubscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/colorWhite"
        android:outlineSpotShadowColor="@color/colorOrange"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/llSubscriptions"
            android:background="@drawable/white_bg_10sdp_with_orange_border"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:orientation="horizontal">

            <com.plugspace.view.CustomTextView
                android:layout_weight="1"
                style="@style/CustomTextViewStyle"
                android:id="@+id/tvSubName"
                android:text="@string/gold"
                android:gravity="start"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/_16ssp"
                app:font_text="@string/font_times_bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.plugspace.view.CustomTextView
                    style="@style/CustomTextViewStyle"
                    android:text="@string/_39_99"
                    android:id="@+id/tvDollarPrice"
                    android:gravity="end"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/_16ssp"
                    app:font_text="@string/font_times_bold" />

                <com.plugspace.view.CustomTextView
                    android:id="@+id/tvMonthlySub"
                    android:layout_marginTop="@dimen/_5sdp"
                    style="@style/CustomTextViewStyle"
                    android:text="@string/_6_months_subscriptions"
                    android:textSize="@dimen/_13ssp"
                    app:font_text="@string/font_times_regular" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>